--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <title>Subway - Highway 21</title>
 </head>
 <body>
+
+    <nav>
+        <div>
+            
+        </div>
+        <div>
+            <h6>You're being served by</h6>
+            <ul>
+                <li>Maddie</li>
+                <li>Aiden</li>
+            </ul>
+        </div>
+
+    </nav>
+
+
+
+
     <header>
-        <h4>Hello! Welcome to</h4>
-        <h1>Subway Highway 21</h1>
+        <h4>Have you tried it?</h4>
+        <h1>#20 Elite Chicken Bacon Ranch</h1>
     </header>
     <div>
         <img id="sub" src="/assets/Titan.png">
